--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-mkdir": "~0.1.2",
-    "grunt-responsive-images": "^0.1.9"
+    "grunt-responsive-images": "^0.1.9",
+    "gulp": "^3.9.1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "gulp-sass": "^4.0.1"
+  },
   "homepage": "https://github.com/cmauban/mws-restaurant-stage-1#readme"
 }
