chore: added autoprefixer

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-mkdir": "~0.1.2",
     "grunt-responsive-images": "^0.1.9",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0"
   },
   "dependencies": {
     "gulp-sass": "^4.0.1"
