--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "https://github.com/cmauban/mws-restaurant-stage-1/issues"
   },
   "devDependencies": {
+    "browser-sync": "^2.24.5",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-copy": "~0.8.0",
