--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-eslint": "^5.0.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
+    "idb": "^2.1.3",
     "imagemin": "^6.0.0",
     "imagemin-pngquant": "^6.0.0"
   },
